--- a/demoweb/build.gradle
+++ b/demoweb/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation 'com.mchange:c3p0:0.9.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.1.jre8'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+
 
 }
 
