--- a/lineboterp/lineboterp_manager/fly.toml
+++ b/lineboterp/lineboterp_manager/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for enlinebot on 2023-07-20T16:31:13+08:00
+# fly.toml app configuration file generated for three on 2023-09-21T17:17:48+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "enlinebot"
+app = "three"
 primary_region = "nrt"
 kill_signal = "SIGINT"
 kill_timeout = 5
