--- a/lineboterp/lineboterp_consumer/fly.toml
+++ b/lineboterp/lineboterp_consumer/fly.toml
@@ -1,47 +1,38 @@
-# fly.toml app configuration file generated for lineboterp on 2023-06-01T15:05:06+08:00
+# fly.toml app configuration file generated for linebot1022jui on 2023-10-22T15:04:32+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "lineboterp"
+app = "linebot1022jui"
 primary_region = "nrt"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
+kill_timeout = "5s"
 
 [build]
   builder = "paketobuildpacks/builder:base"
-
+  
 [env]
   PORT = "8080"
 
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
-
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 8080
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "60s"
     interval = "15s"
-    restart_limit = 0
     timeout = "10s"
+    grace_period = "1m0s"
